fix(pivotgrid): bottom border on collapsed items

--- a/packages/bootstrap/scss/pivotgrid/_theme.scss
+++ b/packages/bootstrap/scss/pivotgrid/_theme.scss
@@ -22,7 +22,8 @@
         background-color: $panel-bg;
     }
 
-    .k-pivot-toolbar {
+    .k-pivot-toolbar,
+    .k-fieldselector {
         border-color: $grid-header-border;
     }
     .k-pivot-table,
